--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "dependencies": {
     "@pythnetwork/entropy-sdk-solidity": "^2.1.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "phaser": "^3.90.0",
+    "viem": "^2.43.3",
+    "wagmi": "^3.1.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -60,7 +63,7 @@
     "@react-three/fiber": "^8.18.0",
     "@swc/core": "^1.13.3",
     "@tailwindcss/typography": "^0.5.16",
-    "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query": "^5.90.12",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
