--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@privy-io/react-auth": "^3.10.0",
+    "@privy-io/wagmi": "^2.1.3",
     "@pythnetwork/entropy-sdk-solidity": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
+    "buffer": "^6.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "phaser": "^3.90.0",
